# dlstreamer

./: pylintrc  requirements.txt
.github/ISSUE_TEMPLATE/: bug.yaml  feature.yaml
.github/skills/dlstreamer-coding-agent/: SKILL.md
.github/skills/dlstreamer-coding-agent/assets/: README-template.md  export-models-template.py  python-app-template.py
.github/skills/dlstreamer-coding-agent/examples/: pose-estimation-compose.md
.github/skills/dlstreamer-coding-agent/references/: coding-conventions.md  design-patterns.md  hardware-optimization.md  model-preparation.md  pipeline-construction.md
.github/workflows/: dls-build-and-test-deb_pkgs-and-deb_imgs.yaml  dls-build-sources-make-build.yaml  dls-pr-workflow.yaml  dls-test-optimizer.yaml  scorecard.yml
docker/fedora41/: fedora41.Dockerfile
docker/ubuntu/: ubuntu-testing.Dockerfile  ubuntu22.Dockerfile  ubuntu24.Dockerfile
docs/scripts/: generate_elements_page.py
docs/user-guide/dev_guide/advanced_install/: advanced_install_guide_compilation.md
docs/user-guide/get_started/install/: install_guide_ubuntu.md
python/: CMakeLists.txt  pyproject.toml
python/dlstreamer/: __init__.py
python/dlstreamer/onvif/: __init__.py  dls_onvif_camera_entry.py  dls_onvif_config_manager.py  dls_onvif_discovery_engine.py  dls_onvif_discovery_thread.py  misc.py
samples/gstreamer/e2e_performance/: perf_comparison.py
samples/gstreamer/python/coexistence/: coexistence_dls_and_ds.py
samples/gstreamer/python/onvif_cameras_discovery/: README.md  dls_onvif_camera_entry.py  (+4 more)
samples/models/: convert_mars_deepsort.py
scripts/: fix_gir_mtd_fields.py
scripts/download_models/: download_hf_models.py  hf_utils.py
scripts/optimizer/: __main__.py  optimizer.py
src/gst/python/: pytorch_tensor_inference.py
tests/scripts/: unit_test_results.py
tests/unit_tests/tests_gstgva/: test_pipeline_face_detection_and_classification.py  test_pipeline_g3dinference.py  test_pipeline_optimizer.py  test_pipeline_vehicle_pedestrian_tracker.py
(+10 files in other folders)
